force-app/main/default/objects/Translation__c/Translation__c.object-meta.xml
<CustomObject>
    <label>Translation</label>
    <nameField>
        <label>Translation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>