force-app/main/default/objects/Translation__c/fields/Audio_Extent__c.field-meta.xml
<CustomField>
    <fullName>Audio_Extent__c</fullName>
    <label>Audio Extent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FB</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>NTP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>