force-app/main/default/objects/Translation__c/fields/Audio_Status__c.field-meta.xml
<CustomField>
    <fullName>Audio_Status__c</fullName>
    <label>Audio Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>NT Complete, FB planned</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>