force-app/main/default/objects/Translation__c/fields/Available_For_Use__c.field-meta.xml
<CustomField>
    <fullName>Available_For_Use__c</fullName>
    <inlineHelpText>Full Bible, New Testament, New Testament/Psalms, Not available for use</inlineHelpText>
    <label>Available For Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FB</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>NTP</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>