force-app/main/default/objects/Translation__c/fields/Available_in_Print__c.field-meta.xml
<CustomField>
    <fullName>Available_in_Print__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Check with partner to obtain print copy</inlineHelpText>
    <label>Available in Print</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Translations</relationshipLabel>
    <relationshipName>Translations</relationshipName>
    <type>Lookup</type>
</CustomField>