force-app/main/default/objects/Translation__c/fields/Creative_Commons_Release__c.field-meta.xml
<CustomField>
    <fullName>Creative_Commons_Release__c</fullName>
    <inlineHelpText>Full Bible released in CC; NT released in CC; Approved to release into CC; Not feasible for CC release; TBD researching CC release</inlineHelpText>
    <label>Creative Commons Release</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FB</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not feasible</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>