force-app/main/default/objects/Translation__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <inlineHelpText>First entry is language/dialect name from Ethnologue; second entry if applicable is localized name</inlineHelpText>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Akan, Akuapem Twi</fullName>
            </value>
            <value>
                <fullName>Akan, Asante Twi</fullName>
            </value>
            <value>
                <fullName>Amharic</fullName>
            </value>
            <value>
                <fullName>Arabic, Standard</fullName>
            </value>
            <value>
                <fullName>Awadhi</fullName>
            </value>
            <value>
                <fullName>Bengali</fullName>
            </value>
            <value>
                <fullName>Braj Bhasha</fullName>
            </value>
            <value>
                <fullName>Burmese</fullName>
            </value>
            <value>
                <fullName>CARS</fullName>
            </value>
            <value>
                <fullName>CARS-A</fullName>
            </value>
            <value>
                <fullName>CARS-T</fullName>
            </value>
            <value>
                <fullName>Cebuano</fullName>
            </value>
            <value>
                <fullName>Chhattisgarhi</fullName>
            </value>
            <value>
                <fullName>Chichewa</fullName>
            </value>
            <value>
                <fullName>Chinese, Mandarin, Simplified</fullName>
            </value>
            <value>
                <fullName>Chinese, Mandarin, Traditional</fullName>
            </value>
            <value>
                <fullName>Croatian</fullName>
            </value>
            <value>
                <fullName>Cushitic (formerly Somali)</fullName>
            </value>
            <value>
                <fullName>Czech</fullName>
            </value>
            <value>
                <fullName>Danish</fullName>
            </value>
            <value>
                <fullName>Dari</fullName>
            </value>
            <value>
                <fullName>Dholuo</fullName>
            </value>
            <value>
                <fullName>Dutch</fullName>
            </value>
            <value>
                <fullName>English, NIrV Ang.</fullName>
            </value>
            <value>
                <fullName>English, NIV</fullName>
            </value>
            <value>
                <fullName>English, NIV Ang.</fullName>
            </value>
            <value>
                <fullName>English NIrV</fullName>
            </value>
            <value>
                <fullName>Estonian</fullName>
            </value>
            <value>
                <fullName>Ewe</fullName>
            </value>
            <value>
                <fullName>Finnish</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>