force-app/main/default/objects/Translation__c/fields/Language_Population__c.field-meta.xml
<CustomField>
    <fullName>Language_Population__c</fullName>
    <description>Total number of speakers for the language community.</description>
    <inlineHelpText>Total number of speakers for the language community.</inlineHelpText>
    <label>Language Population</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>