force-app/main/default/objects/Translation__c/fields/Language_Translation_Plan_LTP__c.field-meta.xml
<CustomField>
    <fullName>Language_Translation_Plan_LTP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Language Translation Plan (LTP)</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Translations</relationshipLabel>
    <relationshipName>Translations</relationshipName>
    <type>Lookup</type>
</CustomField>