force-app/main/default/objects/Translation__c/fields/Latest_Revision__c.field-meta.xml
<CustomField>
    <fullName>Latest_Revision__c</fullName>
    <inlineHelpText>Latest copyrighted revision year</inlineHelpText>
    <label>Latest Revision</label>
    <length>4</length>
    <type>Text</type>
</CustomField>