force-app/main/default/objects/Translation__c/fields/Launch_Event__c.field-meta.xml
<CustomField>
    <fullName>Launch_Event__c</fullName>
    <inlineHelpText>Date translation publicly released</inlineHelpText>
    <label>Launch Event</label>
    <type>Date</type>
</CustomField>