force-app/main/default/objects/Translation__c/fields/Migration_Id__c.field-meta.xml
<CustomField>
    <fullName>Migration_Id__c</fullName>
    <externalId>true</externalId>
    <label>Migration Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>