force-app/main/default/objects/Translation__c/fields/Print_Ready_Files__c.field-meta.xml
<CustomField>
    <fullName>Print_Ready_Files__c</fullName>
    <inlineHelpText>Full Bible, New Testament, New Testament/Psalms, No files available</inlineHelpText>
    <label>Print-Ready Files</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FB</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>NTP</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>