force-app/main/default/objects/Translation__c/fields/Projected_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Projected_Completion_Date__c</fullName>
    <formula>TEXT(  Language_Translation_Plan_LTP__r.Projected_Completion_Date__c )</formula>
    <inlineHelpText>Projected Completion Date from LTP</inlineHelpText>
    <label>Projected Completion Date</label>
    <type>Text</type>
</CustomField>