force-app/main/default/objects/Translation__c/fields/Projected_Scope__c.field-meta.xml
<CustomField>
    <fullName>Projected_Scope__c</fullName>
    <formula>TEXT(Language_Translation_Plan_LTP__r.Project_Scope__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Project Scope from LTP: Full Bible, New Testament, New Testament/Psalms</inlineHelpText>
    <label>Projected Scope</label>
    <type>Text</type>
</CustomField>