force-app/main/default/objects/Translation__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <inlineHelpText>Biblica ministry region</inlineHelpText>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>East Asia Pacific</fullName>
            </value>
            <value>
                <fullName>South Asia</fullName>
            </value>
            <value>
                <fullName>Eurasia</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
            </value>
            <value>
                <fullName>MENA</fullName>
            </value>
            <value>
                <fullName>West Africa</fullName>
            </value>
            <value>
                <fullName>North East Africa</fullName>
            </value>
            <value>
                <fullName>Southern Africa</fullName>
            </value>
            <value>
                <fullName>East Africa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>