force-app/main/default/objects/Translation__c/fields/Top_100__c.field-meta.xml
<CustomField>
    <fullName>Top_100__c</fullName>
    <inlineHelpText>ETEN lists this language as Top 100 by number of speakers</inlineHelpText>
    <label>Top 100</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>