force-app/main/default/objects/Translation__c/fields/Translation_Rank__c.field-meta.xml
<CustomField>
    <fullName>Translation_Rank__c</fullName>
    <inlineHelpText>ETEN&apos;s rank by number of speakers</inlineHelpText>
    <label>Translation Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>