force-app/main/default/objects/Translation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Language__c</columns>
    <columns>Top_100__c</columns>
    <columns>Region__c</columns>
    <columns>Creative_Commons_Release__c</columns>
    <columns>Latest_Revision__c</columns>
    <columns>Available_For_Use__c</columns>
    <columns>Projected_Completion_Date__c</columns>
    <columns>Audio_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>